# django-ex

./: README.md  pyproject.toml
src/django_ex/: __init__.py
src/django_ex/middleware/: http.py
src/django_x/: __init__.py
src/django_x/middlewares/: __init__.py  http.py
