[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-x"
version = "0.0.1"
authors = [
    { name="João Felipe Rodriguez", email="jfpr1237@gmail.com" },
]
description = "Unofficial tools for django and htmx compatibility"
dependencies = ["django > 4"]
requires-python = ">=3.8"

license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]

[project.urls]
repository = "https://github.com/VLN37/django-x"
